# cash-register

./: .gitignore  CMakeLists.txt  Cash_Register_it_IT.qm  README.md  aboutdialog.cpp  aboutdialog.ui  cash-register.desktop  cash-register.metainfo.xml  coloredelegate.h  groupswindow.cpp  groupswindow.h  groupswindow.ui  main.cpp  registerwindow.cpp  registerwindow.h  registerwindow.ui  resource.qrc
translations/: Cash_Register_en_150.qm  Cash_Register_en_150.ts  Cash_Register_it_IT.ts
